# PythonWebHW14

./: README.md  pyproject.toml
hw14_spider/: database.db.sqlite3  scrapy.cfg
hw14_spider/hw14_spider/: items.py  middlewares.py  models.py  pipelines.py  settings.py
hw14_spider/hw14_spider/spiders/: authors.py
